# flute

./: CMakeLists.txt  README.md
configs/: mako-render.py
configs/bandits/: pre-vaccination.config.mako  pre-vaccination.real.py
scripts/bandits/: parse_attack_rate.py  pre-vaccination.sh
src/: bnldev.c  epimodel.cpp  epimodel.h
